--- a/VirusTracker/Supporting/Base.lproj/Main.storyboard
+++ b/VirusTracker/Supporting/Base.lproj/Main.storyboard
@@ -332,11 +332,11 @@
             <objects>
                 <viewController storyboardIdentifier="MapViewController" id="fFn-mt-Rlf" customClass="MapViewController" customModule="VirusTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4bC-tp-rZz">
-                        <rect key="frame" x="0.0" y="0.0" width="1080" height="810"/>
+                        <rect key="frame" x="0.0" y="0.0" width="759.5" height="810"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="q9E-yE-ap1">
-                                <rect key="frame" x="0.0" y="0.0" width="1080" height="810"/>
+                                <rect key="frame" x="0.0" y="0.0" width="759.5" height="810"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -353,22 +353,23 @@
             </objects>
             <point key="canvasLocation" x="2960" y="-862"/>
         </scene>
-        <!--View Controller-->
+        <!--Navigation Controller-->
         <scene sceneID="HQA-iR-mGw">
             <objects>
-                <viewController definesPresentationContext="YES" id="g0M-JL-xch" sceneMemberID="viewController">
+                <viewController definesPresentationContext="YES" id="g0M-JL-xch" customClass="UINavigationController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Hos-qm-dru">
-                        <rect key="frame" x="0.0" y="0.0" width="1080" height="810"/>
+                        <rect key="frame" x="0.0" y="0.0" width="759.5" height="760"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="SOb-xz-dA3"/>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" translucent="NO" prompted="NO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zI4-4N-DZm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2236" y="-1569"/>
         </scene>
-        <!--Menu-->
+        <!--Menu View Controller-->
         <scene sceneID="rYV-mR-WuN">
             <objects>
                 <tableViewController storyboardIdentifier="MenuViewController" clearsSelectionOnViewWillAppear="NO" id="L1S-KJ-j5c" customClass="MenuViewController" customModule="VirusTracker" customModuleProvider="target" sceneMemberID="viewController">
@@ -387,10 +388,10 @@
                                 </tableViewCellContentView>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MenuCell" id="qqb-hT-1X2" customClass="MenuCell" customModule="VirusTracker" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="71.5" width="320" height="111"/>
+                                <rect key="frame" x="0.0" y="71.5" width="320" height="111.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qqb-hT-1X2" id="fdf-TE-Tzk">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="111"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="111.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MXB-ot-4sJ">
@@ -401,7 +402,7 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tables" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lWd-sE-nzE">
-                                            <rect key="frame" x="0.0" y="83" width="320" height="28"/>
+                                            <rect key="frame" x="0.0" y="83" width="320" height="28.5"/>
                                             <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                             <color key="textColor" red="0.93334203959999995" green="0.93332201240000001" blue="0.93332588670000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <nil key="highlightedColor"/>
@@ -429,7 +430,11 @@
                             <outlet property="delegate" destination="L1S-KJ-j5c" id="GKK-NL-wGe"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Menu" id="FcS-Z3-SSA"/>
+                    <navigationItem key="navigationItem" id="FcS-Z3-SSA"/>
+                    <connections>
+                        <segue destination="hGX-SS-Kz8" kind="showDetail" identifier="tablesView" id="TBT-8N-aWr"/>
+                        <segue destination="fFn-mt-Rlf" kind="showDetail" identifier="mapView" id="CKz-kg-UtK"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P2w-tZ-i1p" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -462,7 +467,7 @@
                 <splitViewController maximumPrimaryColumnWidth="100" minimumPrimaryColumnWidth="100" id="lsW-3I-8d0" sceneMemberID="viewController">
                     <connections>
                         <segue destination="6iZ-iT-GNW" kind="relationship" relationship="masterViewController" id="a11-Pm-HaW"/>
-                        <segue destination="hGX-SS-Kz8" kind="relationship" relationship="detailViewController" id="46C-wn-nNu"/>
+                        <segue destination="g0M-JL-xch" kind="relationship" relationship="detailViewController" id="gch-OK-f3S"/>
                     </connections>
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1xr-2u-sm7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -486,7 +491,7 @@
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yfy-m1-Sek">
-                                                <rect key="frame" x="108" y="200" width="679.5" height="610"/>
+                                                <rect key="frame" x="0.0" y="200" width="787.5" height="610"/>
                                                 <color key="backgroundColor" red="0.78062373399999996" green="0.38218730690000002" blue="0.2390703857" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             </view>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="X77-9y-5re">
@@ -636,7 +641,7 @@
                                         </subviews>
                                         <color key="backgroundColor" red="0.138211906" green="0.15630552170000001" blue="0.18824207779999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
-                                            <constraint firstItem="yfy-m1-Sek" firstAttribute="leading" secondItem="NC8-KG-jPg" secondAttribute="leading" constant="108" id="03W-4b-RDi"/>
+                                            <constraint firstItem="yfy-m1-Sek" firstAttribute="leading" secondItem="NC8-KG-jPg" secondAttribute="leading" id="03W-4b-RDi"/>
                                             <constraint firstItem="380-Op-Ki3" firstAttribute="bottom" secondItem="bGU-KR-0wm" secondAttribute="bottom" id="07e-cZ-v7e"/>
                                             <constraint firstItem="380-Op-Ki3" firstAttribute="top" secondItem="bGU-KR-0wm" secondAttribute="top" id="4yY-NK-Iwj"/>
                                             <constraint firstItem="NC8-KG-jPg" firstAttribute="trailing" secondItem="bGU-KR-0wm" secondAttribute="trailing" constant="0.5" id="9tO-sW-uF4"/>
@@ -669,7 +674,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dAK-5p-U0w" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2960" y="-1570"/>
+            <point key="canvasLocation" x="3859" y="-1570"/>
         </scene>
     </scenes>
 </document>
